# json-castle

./: LICENSE  README.md  __init__.py  example.py  json_castle.py  setup.cfg  unit_tests.py
.github/workflows/: publish-release.yml  python-package.yml  test-main.yml
examples/: example.json  example.py
src/json_castle/: core.py
tests/: __init__.py  test_json_castle.py
