[metadata]
name = json-castle
version = 0.1.0
author = Marian Pekár
author_email = marian.pekar@gmail.com
url = https://github.com/marianpekar/json-castle
description = Edescription = Built on top of native json module for deserialization from JSON to data classes with additional support for nested objects with variables, environment variables, and post-load overrides.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = json, parser, deserializer, cicd, tool
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: File Formats :: JSON
    Intended Audience :: Developers
    Development Status :: 3 - Alpha