[metadata]
name = json-castle
version = 0.3.0
author = Marian Pekár
author_email = marian.pekar@gmail.com
url = https://github.com/marianpekar/json-castle
description = Built on top of the native json module with additional support for nested objects, variables, expressions, and post-load overrides via CLI.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = json, parser, deserializer, cicd, tool
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: File Formats :: JSON
    Intended Audience :: Developers
    Development Status :: 3 - Alpha